--- a/Fluctuface.Server/Fluctuface.Server.csproj
+++ b/Fluctuface.Server/Fluctuface.Server.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Fluctuface\Fluctuface.csproj" />
+  </ItemGroup>
 
 </Project>
