--- a/Fluctuface.Client/Fluctuface.Client.iOS/Fluctuface.Client.iOS.csproj
+++ b/Fluctuface.Client/Fluctuface.Client.iOS/Fluctuface.Client.iOS.csproj
@@ -68,6 +68,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HttpClientHandlerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -130,6 +131,7 @@
     <Reference Include="Xamarin.iOS" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
@@ -138,7 +140,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\Fluctuface.Client\Fluctuface.Client.csproj">
-      <Project>{03FD0385-CD9E-41BA-A956-98A74A252006}</Project>
+      <Project>{BD443567-4431-402D-8D1F-CE2D8FE91CF5}</Project>
       <Name>Fluctuface.Client</Name>
     </ProjectReference>
   </ItemGroup>
