--- a/Fluctuface.Server/Fluctuface.Server.csproj
+++ b/Fluctuface.Server/Fluctuface.Server.csproj
@@ -17,4 +17,9 @@
   </ItemGroup>
 
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fluctuface\Fluctuface.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
