Revert "Attempting to run the server on a named host"
This reverts commit 40d8771b34621d838efd2a4487e37c259efb105d.

--- a/Fluctuface.Server/Properties/launchSettings.json
+++ b/Fluctuface.Server/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://fluctuface:52596",
+      "applicationUrl": "http://localhost:52596",
       "sslPort": 0
     }
   },
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://fluctuface:52596"
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
