--- a/Fluctuface.Client/Fluctuface.Client/Fluctuface.Client.csproj
+++ b/Fluctuface.Client/Fluctuface.Client/Fluctuface.Client.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Fluctuface\Fluctuface.csproj" />
