OSX: Server: Fixes : 1. Don't run network checks that hang indefinitely on OSX.  2. Launch (Safari) to api/FlucutuantVariables,

--- a/Fluctuface.Server/Properties/launchSettings.json
+++ b/Fluctuface.Server/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "Fluctuface": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/FluctuantVariables",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
