--- a/Fluctuface.Server/Properties/launchSettings.json
+++ b/Fluctuface.Server/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Fluctuface": {
+    "Haiku.Fluctuface": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/FluctuantVariables",
