--- a/Fluctuface.Client/Fluctuface.Client.iOS/Info.plist
+++ b/Fluctuface.Client/Fluctuface.Client.iOS/Info.plist
@@ -23,7 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>Fluctuface.Client</string>
+	<string>Haiku.Fluctuface.Client</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.haikuinteractive.fluctuface</string>
 	<key>CFBundleVersion</key>
@@ -31,7 +31,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>Fluctuface.Client</string>
+	<string>Haiku.Fluctuface.Client</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>UIRequiresPersistentWiFi</key>
